# MeowGang

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  debug_app.bat  debug_output.txt  latest.json  package-lock.json  package.json  progression-planner-plan(1).md
src/: app.css  (+1 more)
src-tauri/: Cargo.toml  build.rs  nsis-hooks.nsh  rustfmt.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: changelogs.json  known_bugs.json
src-tauri/src/: context.rs  init.rs  lib.rs  main.rs  validation.rs  version.rs
src-tauri/src/app/: path.rs
src-tauri/src/database/: data_manager.rs  database.rs  migrations.rs  mod.rs  schema.rs
src-tauri/src/handlers/: auth_handlers.rs  character_handlers.rs  dashboard_calendar_handlers.rs  data_manager_handlers.rs  encounter_sync_handlers.rs  entity_sync_handlers.rs  gold_service_handlers.rs  market_handlers.rs  meow_connect_handlers.rs  mod.rs  party_plan_handlers.rs  progression_handlers.rs  raid_handlers.rs  raid_todo_handlers.rs  reset_handlers.rs  roster_handlers.rs  sync_metadata_handlers.rs  system_handlers.rs  todo_handlers.rs  tracking_handlers.rs
src-tauri/src/market/: market_database.rs  market_scraper.rs  mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/roster/: bible_loadout.rs  detailed_scraper.rs  item_mapping.rs  mod.rs  scraper.rs  skill_mapping.rs
src-tauri/src/services/: gold_logging_service.rs  logging_service.rs  mod.rs  reset_service.rs  update_service.rs
src-tauri/src/settings/: manager.rs  mod.rs  model.rs
(+187 files in other folders)
