[package]
name = "loatracker"
version = "0.1.0"
description = "LOA Tracker - Lost Ark tracking application"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "loatracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2.7"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.26.0"
reqwest = { version = "0.13.2", features = ["json", "rustls", "blocking"] }
tokio = { version = "1.50.0", features = ["full"] }
regex = "1.12.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
urlencoding = "2.1"
thiserror = "1.0"
anyhow = "1.0"
winreg = "0.52"
sysinfo = "0.30"
tauri-plugin-updater = "2.10.1"
notify = "6.1"
semver = "1.0"
dirs = "6.0.0"

